--- a/stable/spinnaker/templates/deployments/clouddriver.yaml
+++ b/stable/spinnaker/templates/deployments/clouddriver.yaml
@@ -18,6 +18,7 @@ spec:
         app: {{ template "fullname" . }}
         component: clouddriver
     spec:
+      serviceAccountName: {{ template "fullname" . }}
       containers:
         - image: {{ .Values.images.clouddriver }}
           name: clouddriver
