--- a/stable/spinnaker/templates/rbac/role.yaml
+++ b/stable/spinnaker/templates/rbac/role.yaml
@@ -1,13 +1,25 @@
 apiVersion: rbac.authorization.k8s.io/v1alpha1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: {{ template "fullname" . }}-role
+  name: {{ template "fullname" . }}
 rules:
 - apiGroups: ["extensions", "app"]
-  resources: ["deployments", "replicasets", "ingresses", "horizontalpodautoscalers"]
+  resources: 
+  - deployments
+  - replicasets
+  - ingresses
+  verbs: ["*"]
+- apiGroups: ["autoscaling"]
+  resources: 
+  - horizontalpodautoscalers
   verbs: ["*"]
 - apiGroups: [""]
-  resources: ["namespaces", "events", "replicationcontrollers"]
+  resources: 
+  - namespaces
+  - events
+  - replicationcontrollers
+  - serviceaccounts
+  - configmaps
   verbs: ["get", "list"]
 - apiGroups: [""]
   resources: ["pods", "services", "secrets"]
