--- a/stable/spinnaker/templates/rbac/rolebinding.yaml
+++ b/stable/spinnaker/templates/rbac/rolebinding.yaml
@@ -1,12 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1alpha1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: {{ template "fullname" . }}-role-binding
-  namespace: {{ .Release.Namespace }}
+  name: {{ template "fullname" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: {{ template "fullname" . }}-role
+  kind: ClusterRole
+  name: {{ template "fullname" . }}
 subjects:
 - namespace: {{ .Release.Namespace }}
   kind: ServiceAccount
