--- a/stable/spinnaker/values.yaml
+++ b/stable/spinnaker/values.yaml
@@ -36,14 +36,14 @@ slack:
 
 # Images for each component
 images:
-  clouddriver: gcr.io/spinnaker-marketplace/clouddriver:0.5.0-72
-  echo: gcr.io/spinnaker-marketplace/echo:0.4.0-72
-  deck: gcr.io/spinnaker-marketplace/deck:1.3.0-72
-  igor: gcr.io/spinnaker-marketplace/igor:0.4.0-72
-  orca: gcr.io/spinnaker-marketplace/orca:0.5.0-72
-  gate: gcr.io/spinnaker-marketplace/gate:0.5.0-72
-  front50: gcr.io/spinnaker-marketplace/front50:0.4.1-72
-  rosco: gcr.io/spinnaker-marketplace/rosco:0.4.0-72
+  clouddriver: gcr.io/spinnaker-marketplace/clouddriver:1.0.0-20171108151529
+  echo: gcr.io/spinnaker-marketplace/echo:0.7.0-20171108151529
+  deck: gcr.io/spinnaker-marketplace/deck:2.0.0-20171108151529
+  igor: gcr.io/spinnaker-marketplace/igor:0.8.0-20171108151529
+  orca: gcr.io/spinnaker-marketplace/orca:0.9.0-20171108151529
+  gate: gcr.io/spinnaker-marketplace/gate:0.9.0-20171108151529
+  front50: gcr.io/spinnaker-marketplace/front50:0.8.0-20171108151529
+  rosco: gcr.io/spinnaker-marketplace/rosco:0.4.4-20171108151529
 
 # Change this if youd like to expose Spinnaker outside the cluster
 deck:
