--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -28,6 +28,7 @@ Master:
   #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
   # Used to create Ingress record (should used with ServiceType: ClusterIP)
   # HostName: jenkins.cluster.local
+  # ExternalHostName: jenkins.cluster.external
   # NodePort: <to set explicitly, choose port between 30000-32767
   ContainerPort: 8080
   SlaveListenerPort: 50000
@@ -73,6 +74,12 @@ Master:
     # - secretName: jenkins.cluster.local
     #   hosts:
     #     - jenkins.cluster.local
+
+  ExternalIngress:
+    Annotations:
+    # kubernetes.io/ingress.class: nginx-external
+    # kubernetes.io/tls-acme: "true"
+  # BackendPath: /some-path
 
 Agent:
   Enabled: true
