--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -79,7 +79,9 @@ Master:
     Annotations:
     # kubernetes.io/ingress.class: nginx-external
     # kubernetes.io/tls-acme: "true"
-  # BackendPath: /some-path
+  # Paths:
+  # - /path-1
+  # - /path-2
 
 Agent:
   Enabled: true
